--- a/src/app/componentes/lista-desplegable/textbox-lista-desplegable.component.html
+++ b/src/app/componentes/lista-desplegable/textbox-lista-desplegable.component.html
@@ -2,7 +2,9 @@
             
               
          
-               
+         <div align="center">
+
+
  <table>
    <tr>
      <td [style.display]="ocultar ? 'none' : 'inline-block'" > <label   [ngClass]="clase_label" for="dropdown" [style.width.px]="label_ancho" >{{titulo}}</label></td>
@@ -18,4 +20,4 @@
 
          
               
-   
+</div>      
