--- a/src/app/paginas/formulario_F/formulario-f.component.css
+++ b/src/app/paginas/formulario_F/formulario-f.component.css
@@ -6,7 +6,7 @@
 table
 {
     margin-left:10px;
-    
+    margin-right: 10px;
 }
 
 .div_responsivo {
@@ -16,6 +16,7 @@ table
  
  
 }
+t
 .contenedor
 {
   
