--- a/src/app/componentes/lista-desplegable/textbox-lista-desplegable.component.css
+++ b/src/app/componentes/lista-desplegable/textbox-lista-desplegable.component.css
@@ -39,8 +39,12 @@ label{
      
     }
 
-    
-
+    /*FORMULARIO D*/
+    .input_form_d
+    {
+        width:  4rem;
+    }
+ /*FORMULARIO D*/
     @media  screen and (max-width: 361px)  {
         .form-control{
             width: 17rem;
@@ -53,8 +57,20 @@ label{
         {
             width: 6rem;
         }
+        
+    /*FORMULARIO D*/
+    .input_form_d
+    {
+        width:  4rem;
     }
-    @media  screen and (max-width: 425px) and (min-width:361px)   {
+    
+       /*FORMULARIO H*/
+       .input_form_h
+       {
+        width: 3rem;
+       }
+    }
+    @media  screen and (max-width: 426px) and (min-width:361px)   {
         .codigo-fono{
             width: 10rem;
         
@@ -86,7 +102,7 @@ label{
       
         .form-control
         {
-            width:10rem;
+            width:22rem;
             height: 30px;   
             font-size: 12px;
             padding-top: 1px;
@@ -96,14 +112,61 @@ label{
         {
             width:10rem;
         }
-    
+        .input_form_h
+        {
+            width: 8rem;
+        }
 
     }
-    @media  screen and (max-width:752px) and (min-width:450px) {
+    @media  screen and (max-width:637px) and (min-width:426px)
+     {
+
+             /*FORMULARIO H*/
+             .input_form_h
+             {
+               height: 27px;
+              width: 5.1rem;
+             }
+    
+           
+    }
+    @media  screen and (max-width:752px) and (min-width:637px) {
         .form-control {
-            width: 12.7rem;
+            width: 10.1rem;
+            height: 30px;
+            font-size: 12px;
+            padding-top: 2px;
+            padding-bottom: 2px;
         }
- 
+        td
+        {
+            display: flex;
+            
+        }
+        .mini-input
+        {
+            width:5.4rem;
+        }
+        .fono
+        {
+        width: 9.4rem;
+        height: 30px;
+        font-size: 12px;
+        padding-top: 2px;
+        padding-bottom: 2px;
+        }
+        .codigo-fono
+        {
+        width: 8rem;
+
+        }
+                /*FORMULARIO H*/
+  .input_form_h
+  {
+    height: 27px;
+   width: 8.1rem;
+  }
+    
     }
 @media  screen and (max-width:850px) and (min-width:752px) {
     
@@ -125,9 +188,9 @@ label{
     .form-control
     {
 
-        width:13.7rem;
-        height: 30px;
-            font-size: 12px;
+        width:14.7rem;
+        height: 37px;
+            font-size: 16px;
             padding-top: 2px;
             padding-bottom: 2px;
    
@@ -138,21 +201,39 @@ label{
    
     .mini-input
     {
-        width:8.8rem;
+        width:10.8rem;
     }
     .codigo-fono
     {
         width:9.4rem;
     }
+    /*FORMULARIO D*/
+  .input_form_d
+  {
+
+   width: 9rem;
+  }
+  .porcentaje
+  {
+      width: 2rem;
+  }
+    /*FORMULARIO H*/
+    .input_form_h
+    {
+  
+     width: 8.1rem;
+    }
+  
  }
  @media  screen and (max-width: 1165px) and (min-width: 850px) {
-  
-    .form-control
-    {
-    
-        width:131px;
-        height: 22px;
-    }
+         
+  /*FORMULARIO D*/
+  .input_form_d
+  {
+
+   width: 4rem;
+  }
+ 
     label
     {
         width:88px;
@@ -179,6 +260,12 @@ label{
     width: 52px;
 }
 
+  /*FORMULARIO H*/
+  .input_form_h
+  {
+
+   width: 9.1rem;
+  }
 
 
   }
@@ -216,5 +303,20 @@ label{
         width: 67px;
      
     }
+    
+  /*FORMULARIO D*/
+  .input_form_d
+  {
+
+   width: 5rem;
+  }
+  /*FORMULARIO H*/
+  .input_form_h
+  {
+
+   width: 9.1rem;
+  }
+
+  
   }
 
