--- a/src/app/componentes/textbox-numerico/textbox-numerico.component.html
+++ b/src/app/componentes/textbox-numerico/textbox-numerico.component.html
@@ -1,5 +1,5 @@
 
-<div>
+<div align="center">
     <table>
         <tr>
           <td [style.display]="ocultar ? 'none' : 'inline-block'">  <label for="text" [style.width.px]="label_ancho" [ngClass]="clase_label">{{titulo}}</label></td>
