--- a/src/app/paginas/formulario_A/form-a.component.html
+++ b/src/app/paginas/formulario_A/form-a.component.html
@@ -32,7 +32,7 @@
                     <textbox [titulo]="'Rut empresa'"   [clase_input]="'ancho_50'"></textbox>
                     <textbox [titulo]="'Nombre propietario'"  [clase_input]="'ancho_50'"></textbox>
                     <textbox [titulo]="'Razón social'"  [clase_input]="'ancho_total'"></textbox>
-                    <button class="btn-primary boton">CAMBIAR RAZÓN SOCIAL</button>
+                    <button class="btn-primary boton ">CAMBIAR RAZÓN SOCIAL</button>
             </div>
             <div class="form-inline">
                       
@@ -109,13 +109,13 @@
                 
                 <email [titulo]="'Email encuestado'" [clase_label]="'label_largo'" [clase_input]="'ancho_50'"></email>
               
-                <lista-desplegable [titulo]="'Fono'" [clase_input]="'codigo-fono'" ></lista-desplegable>
+                <codigo-fono [titulo]="'Fono'" [clase_input]="'codigo-fono'" ></codigo-fono>
                 <textbox-numerico [titulo]="''" [clase_input]="'fono'" ></textbox-numerico>
             </div>
   
           
        </div>
-       <div class="btn_enviar" align="center">     <button type="submit" class="btn btn-success">ENVIAR FORMULARIO</button></div>
+       <div class="btn_enviar" align="center">     <button type="submit" class="btn btn-success btn-lg">FINALIZAR FORMULARIO</button></div>
   
 </form>
 
