--- a/src/app/componentes/textbox-porcentaje/textbox-porcentaje.component.html
+++ b/src/app/componentes/textbox-porcentaje/textbox-porcentaje.component.html
@@ -1,11 +1,9 @@
-
-
 <div class="row">
     <div class="col-sm-3">
         <label>input-porcentaje</label>
-    
+
     </div>
     <div class="col-sm-9">
-        <input type="number"  class="form-control">
-      </div>
+        <input [(ngModel)]="value" type="number" class="form-control">
     </div>
+</div>
