--- a/src/app/paginas/formulario_I/formulario-i.component.html
+++ b/src/app/paginas/formulario_I/formulario-i.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <app-title  [formulario]=true></app-title>
-<div class="contenedor">
+<div class="contenedor animated fadeIn fast">
         <subtitulo [titulo]="'La empresa cuenta con'"></subtitulo>
 
 
