--- a/src/app/componentes/lista-desplegable/textbox-lista-desplegable.component.html
+++ b/src/app/componentes/lista-desplegable/textbox-lista-desplegable.component.html
@@ -1,23 +1,13 @@
+<div align="center">
 
-            
-              
-         
-         <div align="center">
+    <table>
+        <tr>
+            <td [style.display]="ocultar ? 'none' : 'inline-block'"> <label [ngClass]="clase_label" for="dropdown" [style.width.px]="label_ancho">{{titulo}}</label></td>
+            <td><select [(ngModel)]="value" [ngClass]="clase_input" class="form-control" id="dropdown" [style.width.px]="input_ancho"> 
+                 <option *ngFor="let option of RegionesYcomunas ; let i = index" value="{{i}}">{{option[0]}}</option>  
+        </select> </td>
+        </tr>
 
+    </table>
 
- <table>
-   <tr>
-     <td [style.display]="ocultar ? 'none' : 'inline-block'" > <label   [ngClass]="clase_label" for="dropdown" [style.width.px]="label_ancho" >{{titulo}}</label></td>
-     <td><select  [ngClass]="clase_input" class="form-control" id="dropdown" [style.width.px]="input_ancho">
-        <option  value="Seleccione...">Seleccione...</option>
-        <option  value="Seleccione...">1</option>
-        <option  value="Seleccione...">2</option>
-        <option  value="Seleccione...">3</option>
-        <option  value="Seleccione...">4</option>
-      </select> </td>
-   </tr>
- </table>                 
-
-         
-              
-</div>      
+</div>
