--- a/src/app/componentes/textbox-entero/textbox-entero.component.html
+++ b/src/app/componentes/textbox-entero/textbox-entero.component.html
@@ -1,3 +1,3 @@
-   <label>input-entero
-    <input  class="form-control" type="number">
+<label>input-entero
+    <input  class="form-control"  [(ngModel)]="value" type="number">
   </label>
