--- a/src/app/componentes/textbox-texto/textbox-texto.component.html
+++ b/src/app/componentes/textbox-texto/textbox-texto.component.html
@@ -1,15 +1,11 @@
-
-
-
-
-
-
-
 <div>
-<table>
-    <tr>
-      <td [style.display]="ocultar ? 'none' : 'inline-block'">  <label for="text" [style.width.px]="label_ancho" [ngClass]="clase_label">{{titulo}}</label></td>
-      <td><input [ngClass]="clase_input" id="text" type="text"    class="form-control" [style.width.px]="input_ancho"></td>
-    </tr>
-  </table>                 
+    <table>
+        <tr>
+            <td [style.display]="ocultar ? 'none' : 'inline-block'"> <label for="text" [style.width.px]="label_ancho" [ngClass]="clase_label">{{titulo}}</label></td>
+            <td><input [(ngModel)]="value" id="text" type="text" class="form-control" [ngClass]="clase_input" [style.width.px]="input_ancho" minlength="4">
+
+            </td>
+        </tr>
+
+    </table>
 </div>
