--- a/src/app/paginas/formulario_A/form-a.component.html
+++ b/src/app/paginas/formulario_A/form-a.component.html
@@ -1,3 +1,4 @@
+<app-navbar>
 
 
 
@@ -6,117 +7,119 @@
 
 
 
+</app-navbar>
+<app-title [formulario]=true></app-title>
+<form [formGroup]="forma" (ngSubmit)="guardar()" novalidate="novalidate">
+    <div class="contenedor animated fadeIn fast">
 
-<app-navbar></app-navbar>
-<app-title  [formulario]=true></app-title>
-<form >
-<div class="contenedor">
-       
         <subtitulo [titulo]="'A1. Antecedente de la planta'"></subtitulo>
-        <div class="form-inline" >
-                <lista-desplegable  [titulo]="'Región'"></lista-desplegable>
-                <lista-desplegable [titulo]="'Provincia'"></lista-desplegable>
-                <lista-desplegable [titulo]="'Comuna'"></lista-desplegable>
-            </div>
+        <div class="form-inline">
+            <lista-desplegable formControlName="region" [titulo]="'Región'"></lista-desplegable>
+            <lista-desplegable [region_seleccionada]="forma.controls['region'].value" formControlName="provincia" [titulo]="'Provincia'"></lista-desplegable>
+            <lista-desplegable formControlName="comuna" [titulo]="'Comuna'"></lista-desplegable>
+        </div>
 
-            <div class="form-inline" >
-                    <textbox  [titulo]="'Localidad'" [clase_input]="'ancho_total'"></textbox>
-                    <textbox [titulo]="'Huso'"  [clase_input]="'mini-input'"  [clase_label]="'mini-label'" ></textbox>
-                    <lista-desplegable [titulo]="'Zona'"  [clase_input]="'mini-input'"  [clase_label]="'mini-label'"></lista-desplegable>
-                    <textbox [titulo]="'UTM X'" [clase_input]="'mini-input'"  [clase_label]="'mini-label'"></textbox>
-                    <textbox [titulo]="'UTM Y'"   [clase_input]="'mini-input'"  [clase_label]="'mini-label'"></textbox>
-                   <button class="btn-gps"><img class="img-gps"  src="assets\icons\icon_place.png"></button>
-                   
-            </div>
-            <div class="form-inline"> 
-                    <textbox [titulo]="'Rut empresa'"   [clase_input]="'ancho_50'"></textbox>
-                    <textbox [titulo]="'Nombre propietario'"  [clase_input]="'ancho_50'"></textbox>
-                    <textbox [titulo]="'Razón social'"  [clase_input]="'ancho_total'"></textbox>
-                    <button class="btn-primary boton ">CAMBIAR RAZÓN SOCIAL</button>
-            </div>
-            <div class="form-inline">
-                      
-                     <textbox [titulo]="'Nombre planta'"  [clase_input]="'ancho_50'"></textbox>
-                     <textbox [titulo]="'Ciudad planta'"  [clase_input]="'ancho_50'"></textbox>
-                     <textbox [titulo]="'Dirección planta'"  [clase_input]="'ancho_total'"></textbox>
-            </div>
-            <div class="form-inline">
-                    
-               <codigo-fono [titulo]="'Fono 1'"  [clase_input]="'codigo-fono'"  ></codigo-fono>
-                 <textbox-numerico [titulo]="''" [clase_input]="'fono'"    ></textbox-numerico>
-               <codigo-fono [titulo]="'Fono 2'"  [clase_input]="'codigo-fono'"></codigo-fono>
-                <textbox-numerico [titulo]="''"   [clase_input]="'fono'"></textbox-numerico>
-                   <email [titulo]="'Email planta'" [clase_input]="'ancho_50'"></email>
-                   <textbox [titulo]="'Casilla planta'" [clase_input]="'ancho_50'"></textbox>
-                 
-                </div>
+        <div class="form-inline">
+            <textbox [titulo]="'Localidad'" [clase_input]="'ancho_total'"></textbox>
+            <textbox formControlName="huso" [titulo]="'Huso'" [clase_input]="'mini-input'" [clase_label]="'mini-label'"></textbox>
+            <lista-desplegable formControlName="zona" [titulo]="'Zona'" [clase_input]="'mini-input'" [clase_label]="'mini-label'"></lista-desplegable>
+            <textbox formControlName="utmx" [titulo]="'UTM X'" [clase_input]="'mini-input'" [clase_label]="'mini-label'"></textbox>
+            <textbox formControlName="utmy" [titulo]="'UTM Y'" [clase_input]="'mini-input'" [clase_label]="'mini-label'"></textbox>
+            <button class="btn-gps"><img class="img-gps"  src="assets\icons\icon_place.png"></button>
+        </div>
+        <div class="form-inline">
+            <textbox formControlName="rut_empresa" [titulo]="'Rut empresa'" [clase_input]="'ancho_50'"></textbox>
+            <textbox formControlName="nombre_propietario" [titulo]="'Nombre propietario'" [clase_input]="'ancho_50'"></textbox>
+            <textbox formControlName="razon_social" [titulo]="'Razón social'" [clase_input]="'ancho_total'"></textbox>
+            <button class="btn-primary boton ">CAMBIAR RAZÓN SOCIAL</button>
+        </div>
+        <div class="form-inline">
+            <textbox formControlName="nombre_planta" [titulo]="'Nombre planta'" [clase_input]="'ancho_50'"></textbox>
+            <textbox formControlName="ciudad_planta" [titulo]="'Ciudad planta'" [clase_input]="'ancho_50'"></textbox>
+            <textbox formControlName="direccion_planta" [titulo]="'Dirección planta'" [clase_input]="'ancho_total'"></textbox>
+        </div>
+        <div class="form-inline">
+            <codigo-fono formControlName="codigo_fono_1_planta" [titulo]="'Fono 1'" [clase_input]="'codigo-fono'"></codigo-fono>
+            <textbox-numerico formControlName="num_fono_1_planta" [titulo]="''" [clase_input]="'fono'"></textbox-numerico>
+            <codigo-fono formControlName="codigo_fono_2_planta" [titulo]="'Fono 2'" [clase_input]="'codigo-fono'"></codigo-fono>
+            <textbox-numerico formControlName="num_fono_2_planta" [titulo]="''" [clase_input]="'fono'"></textbox-numerico>
+            <email formControlName="email_planta" [titulo]="'Email planta'" [clase_input]="'ancho_50'"></email>
+            <textbox formControlName="casilla_planta" [titulo]="'Casilla planta'" [clase_input]="'ancho_50'"></textbox>
+        </div>
 
-                <subtitulo [titulo]="'A2. Antecedente de la gerencia'"></subtitulo>
-     <div class="form-inline">
-                      
-            <textbox [titulo]="'Nombre gerente'" [clase_input]="'ancho_total'"></textbox>
-           
-           
-                    <span class="label_switch">¿Los datos de la gerencia son los mismo datos de la planta?</span>
-                   <switch-boton></switch-boton>
-            </div>
-         
-             <div class="form-inline">
-                      
-                    <lista-desplegable [titulo]="'Región'" ></lista-desplegable>
-                    <lista-desplegable [titulo]="'Provincia'"></lista-desplegable>
-                    <lista-desplegable [titulo]="'Comuna'"></lista-desplegable>
-                      
-                     </div>
-                     <div class="form-inline">
-                      
-                                   
-                     <textbox [titulo]="'Dirección gerencia'" [clase_input]="'ancho_total'"></textbox>
-                     <textbox [titulo]="'Ciudad gerencia'" [clase_input]="'ancho_50'"></textbox>
-                         <textbox [titulo]="'Casilla gerencia'" [clase_input]="'ancho_50'"></textbox>
-                    </div>
-                    
-                    
-                             <div class="form-inline">
-                      
-                                   
-                                    <codigo-fono [titulo]="'Fono 1'"  [clase_input]="'codigo-fono'" ></codigo-fono>
-                                    <textbox-numerico [titulo]="''" [clase_input]="'fono'" ></textbox-numerico>
-                                    <codigo-fono [titulo]="'Fono 2'" [clase_input]="'codigo-fono'" ></codigo-fono>
-                                    <textbox-numerico [titulo]="''" [clase_input]="'fono'" ></textbox-numerico>
-                                    <email [titulo]="'Email gerencia'" [clase_input]="'ancho_50'"></email>
-                                    <textbox [titulo]="'Web'" [clase_input]="'ancho_50'"></textbox>
-                            </div>
-        
-        <subtitulo [titulo]="'A3. Antecedentes de la gerencia'"></subtitulo>                       
-          <div class="form-inline">
-                      
-                                   
-                <textbox [titulo]="'Nombre encuestrador'" [clase_label]="'label_largo'" [clase_input]="'ancho_70'" ></textbox>
-                <textbox [titulo]="'Fecha'" [clase_input]="'ancho_10'" ></textbox>
-          </div>
-          <div class="form-inline">
-                      
-                                   
-                
-                <textbox [titulo]="'Nombre encuestado'" [clase_label]="'label_largo'" [clase_input]="'ancho_70'"></textbox>
-                <lista-desplegable [titulo]="'Cargo'"  ></lista-desplegable>
-             
-          </div>        
-          <div class="form-inline">
-                      
-                                   
-                
-                <email [titulo]="'Email encuestado'" [clase_label]="'label_largo'" [clase_input]="'ancho_50'"></email>
-              
-                <codigo-fono [titulo]="'Fono'" [clase_input]="'codigo-fono'" ></codigo-fono>
-                <textbox-numerico [titulo]="''" [clase_input]="'fono'" ></textbox-numerico>
-            </div>
-  
-          
-       </div>
-       <div class="btn_enviar" align="center">     <button type="submit" class="btn btn-success btn-lg">FINALIZAR FORMULARIO</button></div>
-  
+        <subtitulo [titulo]="'A2. Antecedente de la gerencia'"></subtitulo>
+        <div class="form-inline">
+
+            <textbox formControlName="nombre_gerente" [titulo]="'Nombre gerente'" [clase_input]="'ancho_total'"></textbox>
+
+
+            <span class="label_switch">¿Los datos de la gerencia son los mismo datos de la planta?</span>
+            <switch-boton></switch-boton>
+        </div>
+
+        <div class="form-inline">
+
+            <lista-desplegable formControlName="region_gerencia" [titulo]="'Región'"></lista-desplegable>
+            <lista-desplegable formControlName="provincia_gerencia" [titulo]="'Provincia'"></lista-desplegable>
+            <lista-desplegable formControlName="comuna_gerencia" [titulo]="'Comuna'"></lista-desplegable>
+
+        </div>
+        <div class="form-inline">
+
+
+            <textbox formControlName="direccion_gerencia" [titulo]="'Dirección gerencia'" [clase_input]="'ancho_total'"></textbox>
+            <textbox formControlName="ciudad_gerencia" [titulo]="'Ciudad gerencia'" [clase_input]="'ancho_50'"></textbox>
+            <textbox formControlName="casilla_gerencia" [titulo]="'Casilla gerencia'" [clase_input]="'ancho_50'"></textbox>
+        </div>
+
+
+        <div class="form-inline">
+
+
+            <codigo-fono formControlName="codigo_fono_1_gerencia" [titulo]="'Fono 1'" [clase_input]="'codigo-fono'"></codigo-fono>
+            <textbox-numerico formControlName="num_fono_1_gerencia" [titulo]="''" [clase_input]="'fono'"></textbox-numerico>
+            <codigo-fono formControlName="codigo_fono_2_gerencia" [titulo]="'Fono 2'" [clase_input]="'codigo-fono'"></codigo-fono>
+            <textbox-numerico formControlName="num_fono_2_gerencia" [titulo]="''" [clase_input]="'fono'"></textbox-numerico>
+            <email formControlName="casilla_gerencia" [titulo]="'Email gerencia'" [clase_input]="'ancho_50'"></email>
+            <textbox formControlName="web" [titulo]="'Web'" [clase_input]="'ancho_50'"></textbox>
+        </div>
+
+        <subtitulo [titulo]="'A3. Antecedentes del encuestado'"></subtitulo>
+        <div class="form-inline">
+
+
+            <textbox formControlName="nombre_encuestador" [titulo]="'Nombre encuestador'" [clase_label]="'label_largo'" [clase_input]="'ancho_70'"></textbox>
+            <textbox formControlName="fecha" [titulo]="'Fecha'" [clase_input]="'ancho_10'"></textbox>
+        </div>
+        <div class="form-inline">
+
+
+
+            <textbox formControlName="nombre_encuestado" [titulo]="'Nombre encuestado'" [clase_label]="'label_largo'" [clase_input]="'ancho_70'"></textbox>
+            <lista-desplegable formControlName="cargo" [titulo]="'Cargo'"></lista-desplegable>
+
+        </div>
+        <div class="form-inline">
+
+
+
+            <email formControlName="email_encuestado" [titulo]="'Email encuestado'" [clase_label]="'label_largo'" [clase_input]="'ancho_50'"></email>
+
+            <codigo-fono formControlName="codigo_fono_1_encuestado" [titulo]="'Fono'" [clase_input]="'codigo-fono'"></codigo-fono>
+            <textbox-numerico formControlName="num_fono_1_encuestado" [titulo]="''" [clase_input]="'fono'"></textbox-numerico>
+        </div>
+
+
+    </div>
+
+    <h1>{{region_seleccionada}}</h1>
+    <!--
+       <p>fono_numero_1: {{ fono_numero_1 }}</p>
+       <p>codigo_fono_2: {{ codigo_fono_2}}</p>
+       <p>fono_numero_2: {{ fono_numero_2 }}</p>
+-->
+    <div class="btn_enviar" align="center"> <button type="submit" class="btn btn-success btn-lg">FINALIZAR FORMULARIO</button></div>
+
 </form>
 
-<menu-footer ></menu-footer>
+<menu-footer></menu-footer>
