--- a/src/app/paginas/formulario_B/formulario-b.component.html
+++ b/src/app/paginas/formulario_B/formulario-b.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <app-title  [formulario]=true></app-title>
-<div class="contenedor">
+<div class="contenedor animated fadeIn fast">
 
 <subtitulo [titulo]="'A1. Antecedente de la planta'"></subtitulo>     
 
