--- a/src/app/paginas/formulario_D/formulario-d.component.html
+++ b/src/app/paginas/formulario_D/formulario-d.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <app-title  [formulario]=true></app-title>
-<div class="contenedor">
+<div class="contenedor animated fadeIn fast">
     <subtitulo [titulo]="'D1. Abastecimiento de astillos sin corteza'"></subtitulo>
 
 
