--- a/src/app/paginas/formulario_H/formulario-h.component.html
+++ b/src/app/paginas/formulario_H/formulario-h.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <app-title  [formulario]=true></app-title>
-<div class="contenedor">
+<div class="contenedor animated fadeIn fast">
        
     <div class="div_responsivo" style="overflow-x:auto;"> 
         <subtitulo [titulo]="'H1. subproducto de proceso de astillado (%)'"></subtitulo>
