--- a/src/app/componentes/lista-desplegable/textbox-lista-desplegable.component.html
+++ b/src/app/componentes/lista-desplegable/textbox-lista-desplegable.component.html
@@ -3,7 +3,7 @@
     <table>
         <tr>
             <td [style.display]="ocultar ? 'none' : 'inline-block'"> <label [ngClass]="clase_label" for="dropdown" [style.width.px]="label_ancho">{{titulo}}</label></td>
-            <td><select [(ngModel)]="value" [ngClass]="clase_input" class="form-control" id="dropdown" [style.width.px]="input_ancho"> 
+            <td [style.display]="form_c ? 'block' : 'inline-block'"><select [(ngModel)]="value" [ngClass]="clase_input" class="form-control" id="dropdown" [style.width.px]="input_ancho"> 
                  <option *ngFor="let option of RegionesYcomunas ; let i = index" value="{{i}}">{{option[0]}}</option>  
         </select> </td>
         </tr>
