--- a/src/app/componentes/textbox-texto/textbox-texto.component.html
+++ b/src/app/componentes/textbox-texto/textbox-texto.component.html
@@ -2,7 +2,7 @@
     <table>
         <tr>
             <td [style.display]="ocultar ? 'none' : 'inline-block'"> <label for="text" [style.width.px]="label_ancho" [ngClass]="clase_label">{{titulo}}</label></td>
-            <td><input [(ngModel)]="value" id="text" type="text" class="form-control" [ngClass]="clase_input" [style.width.px]="input_ancho" minlength="4">
+            <td [style.display]="form_c ? 'block' : 'inline-block'"><input [(ngModel)]="value" id="text" type="text" class="form-control" [ngClass]="clase_input" [style.width.px]="input_ancho" minlength="4">
 
             </td>
         </tr>
