--- a/src/app/paginas/inicio/home.component.html
+++ b/src/app/paginas/inicio/home.component.html
@@ -1,3 +1,9 @@
 <app-header></app-header>
 <app-sub-nav></app-sub-nav>
+
 <app-row></app-row>
+<table>
+    <tr>
+        <td>{{data}} </td>
+    </tr>
+</table>
